force stream closure when for uploading (bug 121314; r=adamlock; sr=darin; a=shaver)